deployments/home-assistant/zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
      - image: koenkk/zigbee2mqtt:1.42.0
        name: zigbee2mqtt
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        - name: udev
          mountPath: /run/udev
        - name: ttyacm
          mountPath: /dev/ttyACM0
        securityContext:
          privileged: true
      volumes:
      - name: config
        configMap:
          name: zigbee2mqtt-config
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-data
      - name: udev
        hostPath:
          path: /run/udev
      - name: ttyacm
        hostPath:
          path: /dev/ttyACM0
